[project]
name = "saa"
version = "0.0.9"
description = "Converting time into natural language phrases"
authors = [{ name = "Prayson W. Daniel", email = "praysonpi@gmail.com" }]
dependencies = []
requires-python = ">= 3.8"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.ruff.lint]
select = [
  "A", # warn about shadowing built-ins
  "E", # style stuff, whitespaces
  "F", # important pyflakes lints
  "I", # import sorting
  "N", # naming
]

[tool.ruff.lint.per-file-ignores]
"src/saa/*/*.py" = ["N805"] # ignored as first argument is not self

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["src"]
exclude = ["src/saa/luga", "src/saa/core/*"]

[tool.urls]
"Homepage" = "https://github.com/Proteusiq/saa"
"Bug Tracker" = "https://github.com/Proteusiq/saa/issues"

[dependency-groups]
dev = [
"ruff>=0.5.6", "pytest>=8.3.2", "pyright>=1.1.374", "hypothesis>=6.0.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.44",
    "mkdocstrings[python]>=0.26.1",
]
