[project]
name = "saa"
version = "0.1.0"
description = "Converting time into natural language phrases"
readme = "README.md"
license = "MIT"
authors = [{ name = "Prayson W. Daniel", email = "14926709+Proteusiq@users.noreply.github.com" }]
requires-python = ">=3.12"
dependencies = []
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Internationalization",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/Proteusiq/saa"
"Bug Tracker" = "https://github.com/Proteusiq/saa/issues"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.ruff.lint]
select = [
  "A", # warn about shadowing built-ins
  "E", # style stuff, whitespaces
  "F", # important pyflakes lints
  "I", # import sorting
  "N", # naming
]

[tool.ruff.lint.per-file-ignores]
"src/saa/*/*.py" = ["N805"] # ignored as first argument is not self

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["src"]
exclude = ["src/saa/luga", "src/saa/core/*"]

[dependency-groups]
dev = [
"ruff>=0.5.6", "pytest>=8.3.2", "pyright>=1.1.374", "hypothesis>=6.0.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.44",
    "mkdocstrings[python]>=0.26.1",
]

[tool.uv]
exclude-newer = "7 days"
