[project]
name = "saa"
version = "0.1.0"
description = "Converting time into natural language phrases"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Prayson W. Daniel", email = "14926709+Proteusiq@users.noreply.github.com" }]
requires-python = ">=3.12"
dependencies = []
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Internationalization",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/Proteusiq/saa"
"Bug Tracker" = "https://github.com/Proteusiq/saa/issues"

[build-system]
requires = ["uv_build>=0.11.15,<0.12"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
  "A",   # warn about shadowing built-ins
  "B",   # flake8-bugbear
  "E",   # style stuff, whitespaces
  "F",   # important pyflakes lints
  "I",   # import sorting
  "N",   # naming
  "RUF", # ruff-specific rules
  "SIM", # flake8-simplify
  "UP",  # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
# N805: first argument is not `self` by plugin design (luga plugins + Luga ABC)
"src/saa/*/*.py" = ["N805"]
# RUF012: class-level dicts are the plugin's data carriers, not instance state
"src/saa/luga/*/*.py" = ["RUF012"]

[tool.ty.src]
include = ["src"]
exclude = ["src/saa/luga", "src/saa/core"]

[dependency-groups]
dev = [
    "hypothesis>=6.0.0",
    "pytest>=8.3.2",
    "ruff>=0.5.6",
    "ty>=0.0.39",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.44",
    "mkdocstrings[python]>=0.26.1",
]

[tool.uv]
exclude-newer = "7 days"
